fix: update drawer UI to not collapse content on smaller screen sizes

--- a/packages/uikit-workshop/src/sass/scss/04-components/_pattern-info.scss
+++ b/packages/uikit-workshop/src/sass/scss/04-components/_pattern-info.scss
@@ -57,15 +57,12 @@
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  max-height: 100%;
-  overflow: auto;
 
-  @media all and (min-width: $pl-bp-med) {
+  @media all and (min-width: $pl-bp-large) {
     flex-basis: 50%;
     flex-grow: 1;
+    overflow: auto;
   }
-
-
 }
 
 /**
